[project]
name = "gxm"
version = "0.1.0"
description = "Reinforcement Learning Environemts in JAX."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "huterguier", email = "huterguier@gmail.com" }
]
dependencies = [
  "jax[cuda12]>=0.5.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
]
gymnax = [
  "gymnax>=0.0.9",
]
envpool = [
  "envpool",
]
pgx = [
  "pgx>=2.6.0",
]
craftax = [
  "craftax",
]
all = [
  "gymnax>=0.0.9",
  "envpool",
  "pgx>=2.6.0",
  "craftax",
]

[project.urls]
Homepage = "https://github.com/huterguier/gxm"

[tool.setuptools.packages.find]
exclude = ["images"]
