[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gxm"
version = "0.1.1"
description = "Reinforcement Learning Environemts in JAX."
readme = "README.md"
requires-python = "==3.10.18"
license = "Apache-2.0"
authors = [
  { name = "huterguier", email = "huterguier@gmail.com" }
]
dependencies = [
  "jax>=0.5.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "gxm[gymnax,gymnasium]",
  "black",
  "isort",
  "pytest",
  "pytest-cov",
]
gymnax = ["gymnax"]
gymnasium = ["gymnasium>=1.0.0", "ale-py"]
envpool = ["envpool==0.6.6", "gym==0.23.1", "numpy<2"]
pgx = ["pgx"]
craftax = ["craftax"]
navix = ["navix"]
jaxatari = ["jaxatari@git+https://github.com/k4ntz/JAXAtari", "pygame"]

[project.urls]
Homepage = "https://github.com/huterguier/gxm"

[tool.setuptools.packages.find]
include = ["gxm", "gxm.*"]
exclude = ["images"]


[tool.uv]
conflicts = [
    [
      { extra = "envpool" },
      { extra = "jaxatari" },
    ],
]
